--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -5,7 +5,35 @@
     android:layout_height="match_parent"
     tools:context=".DictionaryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/teal_200"
+        android:orientation="horizontal"
+        android:weightSum="13">
+
+        <Button
+            android:id="@+id/fr_dictionary_open_camera_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="0.1"
+            android:background="@drawable/ic_camera_24"/>
+
+        <EditText
+            android:id="@+id/fr_dictionary_word_edt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_weight="12.8"/>
+
+        <Button
+            android:id="@+id/fr_dictionary_search_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="0.11"
+            android:background="@drawable/ic_search_24"/>
+
+    </LinearLayout>
 
     <ListView
         android:layout_width="wrap_content"
