--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.DictionaryFragment">
+    tools:context=".fragments.DictionaryFragment"
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,6 +38,7 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/fr_dictionary_list_definition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
