--- a/app/src/main/res/layout/fragment_definition_word_item.xml
+++ b/app/src/main/res/layout/fragment_definition_word_item.xml
@@ -46,10 +46,12 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="20dp"/>
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fr_definition_word_item_meanings_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
         app:layout_constraintTop_toBottomOf="@id/fr_definition_word_item_divider"
         app:layout_constraintLeft_toLeftOf="parent"
