--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.DictionaryFragment"
     android:orientation="horizontal">
 
     <LinearLayout
+        android:id="@+id/fr_dictionary_top_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/teal_200"
         android:orientation="horizontal"
-        android:weightSum="13">
+        android:weightSum="13"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        >
 
         <Button
-            android:id="@+id/fr_dictionary_open_camera_btn"
+            android:id="@+id/fr_dictionary_open_camera_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_weight="0.1"
             android:background="@drawable/ic_camera_24"/>
 
         <EditText
-            android:id="@+id/fr_dictionary_word_edt"
+            android:id="@+id/fr_dictionary_word_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_weight="12.8"/>
 
         <Button
-            android:id="@+id/fr_dictionary_search_btn"
+            android:id="@+id/fr_dictionary_search_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_weight="0.11"
@@ -37,10 +43,17 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/fr_dictionary_list_definition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fr_dictionary_list_word_definition_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        tools:listitem="@layout/fragment_definition_word_item"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
+        app:layout_constraintTop_toBottomOf="@id/fr_dictionary_top_bar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
