--- a/app/src/main/res/layout/fragment_definition_item.xml
+++ b/app/src/main/res/layout/fragment_definition_item.xml
@@ -18,16 +18,32 @@
         />
 
     <TextView
-        android:id="@+id/fr_definition_example"
-        android:layout_width="match_parent"
+        android:id="@+id/fr_definition_example_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:text="I gave unicycling a try but I couldn’t do it."
-        android:textSize="17dp"
+        android:text="@string/example"
+        android:textSize="17sp"
+        android:textStyle="italic|bold"
 
         app:layout_constraintTop_toBottomOf="@id/fr_definition_definition"
         app:layout_constraintLeft_toLeftOf="@+id/fr_definition_definition"
         android:layout_marginTop="10dp"
+        />
+
+    <TextView
+        android:id="@+id/fr_definition_example"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="I gave unicycling a try but I couldn’t do it."
+        android:textSize="17sp"
+
+        app:layout_constraintTop_toBottomOf="@id/fr_definition_example_title"
+        app:layout_constraintLeft_toLeftOf="@id/fr_definition_example_title"
+
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="20dp"
         />
 
 
