--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.LoginActivity">
+    tools:context=".activities.LoginActivity"
+    android:gravity="center"
+
+    android:padding="20dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/login"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:textAllCaps="true"
+
+
+        app:layout_constraintBottom_toTopOf="@id/ac_login_username_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="50dp"
+        />
+
+    <TextView
+        android:id="@+id/ac_login_username_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/username"
+        android:textSize="20sp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        android:layout_marginTop="250dp"
+        />
+
+    <EditText
+        android:id="@+id/ac_login_username_edit_text"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+
+        android:hint="@string/example_username"
+        android:autofillHints="emailAddress"
+        android:maxLines="1"
+        android:inputType="text"
+
+        app:layout_constraintTop_toTopOf="@id/ac_login_username_label"
+        app:layout_constraintBottom_toBottomOf="@id/ac_login_username_label"
+        app:layout_constraintLeft_toRightOf="@id/ac_login_username_label"
+
+        android:layout_marginStart="30dp"
+        />
+
+
+    <TextView
+        android:id="@+id/ac_login_password_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/password"
+        android:textSize="20sp"
+
+        app:layout_constraintTop_toBottomOf="@id/ac_login_username_label"
+        app:layout_constraintBottom_toBottomOf="@id/ac_login_password_edit_text"
+        app:layout_constraintLeft_toLeftOf="@id/ac_login_username_label"
+
+        android:layout_marginTop="30dp"
+        />
+
+    <EditText
+        android:id="@+id/ac_login_password_edit_text"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+
+        android:maxLines="1"
+        android:inputType="textWebPassword"
+
+        app:layout_constraintTop_toBottomOf="@id/ac_login_username_edit_text"
+        app:layout_constraintLeft_toLeftOf="@id/ac_login_username_edit_text"
+        android:layout_marginTop="20dp"
+        />
+
+    <Button
+        android:id="@+id/ac_login_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/login"
+
+        app:layout_constraintTop_toBottomOf="@id/ac_login_password_edit_text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="40dp"
+        />
+
+    <LinearLayout
+        android:id="@+id/ac_login_functional_section"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+
+        app:layout_constraintTop_toBottomOf="@id/ac_login_login_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:id="@+id/ac_login_create_account_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/create_account"
+            android:textSize="17sp"
+            android:textStyle="italic"
+            android:textAlignment="center"
+
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/ac_login_forgot_password_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/forgot_password"
+            android:textSize="17sp"
+            android:textAlignment="center"
+
+            android:layout_weight="1"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
