--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@id/ac_login_login_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="30dp">
 
         <TextView
             android:id="@+id/ac_login_create_account_text_view"
@@ -130,6 +130,7 @@
 
             android:text="@string/forgot_password"
             android:textSize="17sp"
+            android:textStyle="italic"
             android:textAlignment="center"
 
             android:layout_weight="1"/>
