--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -131,6 +131,8 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
 
+        android:hint="@string/example_full_name"
+
         app:layout_constraintTop_toBottomOf="@id/ac_register_confirm_password_edit_text"
         app:layout_constraintLeft_toLeftOf="@id/ac_register_confirm_password_edit_text"
         android:layout_marginTop="20dp"
