--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,15 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ProfileFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".fragments.ProfileFragment"
+    android:padding="20dp">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:id="@+id/fr_profile_user_avatar_image_view"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Profile Fragment"
-        android:textSize="30sp"/>
+        android:id="@+id/fr_profile_user_full_name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-</FrameLayout>
+        android:text="@string/example_full_name"
+        android:textSize="30sp"
+
+        app:layout_constraintTop_toTopOf="@id/fr_profile_user_avatar_image_view"
+        app:layout_constraintLeft_toRightOf="@id/fr_profile_user_avatar_image_view"
+
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="30dp"
+        />
+
+    <TextView
+        android:id="@+id/fr_profile_user_email_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/example_username"
+        android:textSize="20sp"
+
+        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_full_name_text_view"
+        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_full_name_text_view"
+        android:layout_marginTop="10dp"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
