--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -44,4 +44,34 @@
         android:layout_marginTop="10dp"
         />
 
+    <Button
+        android:id="@+id/fr_profile_user_edit_profile_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/edit_profile"
+        android:textSize="17sp"
+        android:textAllCaps="true"
+
+
+        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_email_text_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="40dp"
+        />
+
+    <Button
+        android:id="@+id/fr_profile_user_sign_out_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+
+        android:background="@drawable/ic_logout_24"
+        android:textSize="13sp"
+        android:textAllCaps="true"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="80dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
