--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,53 +88,48 @@
 
     <Button
         android:id="@+id/ac_login_login_button"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
 
         android:text="@string/login"
+        android:textAllCaps="true"
+        android:textSize="17sp"
 
-        app:layout_constraintTop_toBottomOf="@id/ac_login_password_edit_text"
+        app:layout_constraintTop_toBottomOf="@id/ac_login_forgot_password_text_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="25dp"
         />
 
-    <LinearLayout
-        android:id="@+id/ac_login_functional_section"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/ac_login_create_account_text_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:orientation="horizontal"
+        android:text="@string/create_account"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
 
+        android:layout_weight="1"
         app:layout_constraintTop_toBottomOf="@id/ac_login_login_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="20dp"/>
 
-        <TextView
-            android:id="@+id/ac_login_create_account_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+    <TextView
+        android:id="@+id/ac_login_forgot_password_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-            android:text="@string/create_account"
-            android:textSize="17sp"
-            android:textStyle="italic"
-            android:textAlignment="center"
+        android:text="@string/forgot_password"
+        android:textSize="15sp"
+        android:textStyle="italic"
+        android:textAlignment="center"
 
-            android:layout_weight="1"/>
+        app:layout_constraintTop_toBottomOf="@id/ac_login_password_edit_text"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="15dp"/>
 
-        <TextView
-            android:id="@+id/ac_login_forgot_password_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="@string/forgot_password"
-            android:textSize="17sp"
-            android:textStyle="italic"
-            android:textAlignment="center"
-
-            android:layout_weight="1"/>
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
