--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -1,9 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ResetPasswordActivity">
+    tools:context=".activities.ResetPasswordActivity"
+
+    android:padding="20dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/reset_password"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:textAllCaps="true"
+
+
+        app:layout_constraintBottom_toTopOf="@id/ac_reset_password_email_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="50dp"
+        />
+
+    <TextView
+        android:id="@+id/ac_reset_password_email_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="Enter your email address to receive recovery email from us"
+        android:textSize="20sp"
+        android:textAlignment="center"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        android:layout_marginTop="300dp"
+        />
+
+    <EditText
+        android:id="@+id/ac_reset_password_email_edit_text"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+
+        android:hint="@string/example_username"
+        android:autofillHints="emailAddress"
+        android:maxLines="1"
+        android:inputType="text"
+        android:textSize="20sp"
+
+        app:layout_constraintTop_toBottomOf="@id/ac_reset_password_email_label"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        android:layout_marginTop="30dp"
+        />
+
+    <Button
+        android:id="@+id/ac_reset_password_ok_button"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+
+        android:text="@string/ok"
+        android:textAllCaps="true"
+        android:textSize="17sp"
+
+        app:layout_constraintTop_toBottomOf="@id/ac_reset_password_email_edit_text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="30dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
