--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -37,11 +37,90 @@
         android:layout_height="wrap_content"
 
         android:text="@string/example_username"
-        android:textSize="20sp"
+        android:textSize="15sp"
 
         app:layout_constraintTop_toBottomOf="@id/fr_profile_user_full_name_text_view"
         app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_full_name_text_view"
         android:layout_marginTop="10dp"
+        />
+
+    <TextView
+        android:id="@+id/fr_profile_user_gender_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/gender"
+        android:textSize="20sp"
+
+        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_avatar_image_view"
+        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_avatar_image_view"
+        android:layout_marginTop="30dp"/>
+
+    <ImageView
+        android:id="@+id/fr_profile_user_gender_image_view"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+
+        app:layout_constraintTop_toTopOf="@id/fr_profile_user_gender_label"
+        app:layout_constraintBottom_toBottomOf="@id/fr_profile_user_gender_label"
+        app:layout_constraintLeft_toRightOf="@id/fr_profile_user_gender_label"
+
+        android:layout_marginStart="60dp"/>
+
+    <TextView
+        android:id="@+id/fr_profile_user_level_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/level"
+        android:textSize="20sp"
+
+        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_gender_label"
+        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_label"
+
+        android:layout_marginTop="30dp"
+        />
+
+    <TextView
+        android:id="@+id/fr_profile_user_level_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/level_example"
+        android:textSize="17sp"
+        android:textStyle="bold"
+
+        app:layout_constraintTop_toTopOf="@id/fr_profile_user_level_label"
+        app:layout_constraintBottom_toBottomOf="@id/fr_profile_user_level_label"
+        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_image_view"
+        />
+
+    <TextView
+        android:id="@+id/fr_profile_occupation_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/occupation"
+        android:textSize="20sp"
+
+        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_level_label"
+        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_level_label"
+
+        android:layout_marginTop="30dp"
+        />
+
+    <TextView
+        android:id="@+id/fr_profile_user_occupation_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/occupation_example"
+        android:textSize="17sp"
+        android:textStyle="bold"
+
+        app:layout_constraintTop_toTopOf="@id/fr_profile_occupation_label"
+        app:layout_constraintBottom_toBottomOf="@id/fr_profile_occupation_label"
+        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_image_view"
         />
 
     <Button
@@ -55,6 +134,7 @@
 
 
         app:layout_constraintTop_toBottomOf="@id/fr_profile_user_email_text_view"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="40dp"
@@ -62,16 +142,18 @@
 
     <Button
         android:id="@+id/fr_profile_user_sign_out_button"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-        android:background="@drawable/ic_logout_24"
+        android:text="@string/log_out"
         android:textSize="13sp"
         android:textAllCaps="true"
+        android:backgroundTint="#C30000"
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="80dp"/>
+        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_edit_profile_button"
+        app:layout_constraintRight_toRightOf="@id/fr_profile_user_edit_profile_button"
+        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_edit_profile_button"
+        android:layout_marginTop="30dp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
