--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -148,7 +148,7 @@
         android:text="@string/log_out"
         android:textSize="13sp"
         android:textAllCaps="true"
-        android:backgroundTint="#C30000"
+        android:backgroundTint="@color/danger"
 
         app:layout_constraintTop_toBottomOf="@id/fr_profile_user_edit_profile_button"
         app:layout_constraintRight_toRightOf="@id/fr_profile_user_edit_profile_button"
