--- a/app/src/main/res/layout/fragment_definition_item.xml
+++ b/app/src/main/res/layout/fragment_definition_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="20dp">
@@ -46,5 +46,15 @@
         android:layout_marginStart="20dp"
         />
 
+    <Button
+        android:id="@+id/fr_definition_add_to_word_list_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/add_to_word_list"
+
+        app:layout_constraintTop_toBottomOf="@id/fr_definition_example"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="30dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
