--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -8,50 +8,52 @@
     android:padding="20dp">
 
     <TextView
-        android:id="@+id/fr_explore_my_word_list_label"
+        android:id="@+id/fr_explore_user_wordlist_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:text="@string/my_word_list"
-        android:textSize="17sp"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fr_explore_my_word_list_recycler_view"
+        android:id="@+id/fr_explore_user_wordlist_recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_explore_my_word_list_label"
-        app:layout_constraintLeft_toLeftOf="@id/fr_explore_my_word_list_label"
+        app:layout_constraintTop_toBottomOf="@id/fr_explore_user_wordlist_label"
+        app:layout_constraintLeft_toLeftOf="@id/fr_explore_user_wordlist_label"
         android:layout_marginTop="10dp"/>
 
     <TextView
-        android:id="@+id/fr_explore_cambridge_word_list_label"
+        android:id="@+id/fr_explore_cambridge_wordlist_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:text="@string/cambridge_word_lists"
-        android:textSize="17sp"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_explore_my_word_list_recycler_view"
+        app:layout_constraintTop_toBottomOf="@id/fr_explore_user_wordlist_recycler_view"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="20dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fr_explore_cambridge_word_list_recycler_view"
+        android:id="@+id/fr_explore_cambridge_wordlist_recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_explore_cambridge_word_list_label"
+        app:layout_constraintTop_toBottomOf="@id/fr_explore_cambridge_wordlist_label"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="10dp"
         />
