--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -1,61 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.ExploreFragment"
-    android:padding="20dp">
+    android:background="@color/background"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/bg_rounded_top"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp">
 
-    <TextView
-        android:id="@+id/fr_explore_user_wordlist_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_explore_user_wordlist_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/my_word_list"
-        android:textSize="18sp"
-        android:textStyle="bold|italic"
+            android:text="@string/my_word_list"
+            android:textSize="18sp"
+            android:textStyle="bold|italic"
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fr_explore_user_wordlist_recycler_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/fr_explore_user_wordlist_recycler_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_explore_user_wordlist_label"
-        app:layout_constraintLeft_toLeftOf="@id/fr_explore_user_wordlist_label"
-        android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toBottomOf="@id/fr_explore_user_wordlist_label"
+            app:layout_constraintLeft_toLeftOf="@id/fr_explore_user_wordlist_label"
+            android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:id="@+id/fr_explore_cambridge_wordlist_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_explore_cambridge_wordlist_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/cambridge_word_lists"
-        android:textSize="18sp"
-        android:textStyle="bold|italic"
+            android:text="@string/cambridge_word_lists"
+            android:textSize="18sp"
+            android:textStyle="bold|italic"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_explore_user_wordlist_recycler_view"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"/>
+            app:layout_constraintTop_toBottomOf="@id/fr_explore_user_wordlist_recycler_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="20dp"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fr_explore_cambridge_wordlist_recycler_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/fr_explore_cambridge_wordlist_recycler_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_explore_cambridge_wordlist_label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10dp"
-        />
+            app:layout_constraintTop_toBottomOf="@id/fr_explore_cambridge_wordlist_label"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="10dp"
+            />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
+
