--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,161 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.ProfileFragment"
-    android:padding="20dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background"
+    >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/bg_rounded_top"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp">
 
-    <ImageView
-        android:id="@+id/fr_profile_user_avatar_image_view"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        <ImageView
+            android:id="@+id/fr_profile_user_avatar_image_view"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
 
-        android:scaleType="centerCrop"
+            android:scaleType="centerCrop"
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
 
-    <TextView
-        android:id="@+id/fr_profile_user_full_name_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_profile_user_full_name_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/example_full_name"
-        android:textSize="30sp"
+            android:text="@string/example_full_name"
+            android:textSize="30sp"
 
-        app:layout_constraintTop_toTopOf="@id/fr_profile_user_avatar_image_view"
-        app:layout_constraintLeft_toRightOf="@id/fr_profile_user_avatar_image_view"
+            app:layout_constraintTop_toTopOf="@id/fr_profile_user_avatar_image_view"
+            app:layout_constraintLeft_toRightOf="@id/fr_profile_user_avatar_image_view"
 
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="30dp"
-        />
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="30dp"
+            />
 
-    <TextView
-        android:id="@+id/fr_profile_user_email_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_profile_user_email_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/example_username"
-        android:textSize="15sp"
+            android:text="@string/example_username"
+            android:textSize="15sp"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_full_name_text_view"
-        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_full_name_text_view"
-        android:layout_marginTop="10dp"
-        />
+            app:layout_constraintTop_toBottomOf="@id/fr_profile_user_full_name_text_view"
+            app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_full_name_text_view"
+            android:layout_marginTop="10dp"
+            />
 
-    <TextView
-        android:id="@+id/fr_profile_user_gender_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_profile_user_gender_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/gender"
-        android:textSize="20sp"
+            android:text="@string/gender"
+            android:textSize="20sp"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_avatar_image_view"
-        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_avatar_image_view"
-        android:layout_marginTop="30dp"/>
+            app:layout_constraintTop_toBottomOf="@id/fr_profile_user_avatar_image_view"
+            app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_avatar_image_view"
+            android:layout_marginTop="30dp"/>
 
-    <ImageView
-        android:id="@+id/fr_profile_user_gender_image_view"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        <ImageView
+            android:id="@+id/fr_profile_user_gender_image_view"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
 
-        app:layout_constraintTop_toTopOf="@id/fr_profile_user_gender_label"
-        app:layout_constraintBottom_toBottomOf="@id/fr_profile_user_gender_label"
-        app:layout_constraintLeft_toRightOf="@id/fr_profile_user_gender_label"
+            app:layout_constraintTop_toTopOf="@id/fr_profile_user_gender_label"
+            app:layout_constraintBottom_toBottomOf="@id/fr_profile_user_gender_label"
+            app:layout_constraintLeft_toRightOf="@id/fr_profile_user_gender_label"
 
-        android:layout_marginStart="60dp"/>
+            android:layout_marginStart="60dp"/>
 
-    <TextView
-        android:id="@+id/fr_profile_user_level_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_profile_user_level_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/level"
-        android:textSize="20sp"
+            android:text="@string/level"
+            android:textSize="20sp"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_gender_label"
-        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_label"
+            app:layout_constraintTop_toBottomOf="@id/fr_profile_user_gender_label"
+            app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_label"
 
-        android:layout_marginTop="30dp"
-        />
+            android:layout_marginTop="30dp"
+            />
 
-    <TextView
-        android:id="@+id/fr_profile_user_level_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_profile_user_level_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/level_example"
-        android:textSize="17sp"
-        android:textStyle="bold"
+            android:text="@string/level_example"
+            android:textSize="17sp"
+            android:textStyle="bold"
 
-        app:layout_constraintTop_toTopOf="@id/fr_profile_user_level_label"
-        app:layout_constraintBottom_toBottomOf="@id/fr_profile_user_level_label"
-        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_image_view"
-        />
+            app:layout_constraintTop_toTopOf="@id/fr_profile_user_level_label"
+            app:layout_constraintBottom_toBottomOf="@id/fr_profile_user_level_label"
+            app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_image_view"
+            />
 
-    <TextView
-        android:id="@+id/fr_profile_occupation_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_profile_occupation_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/occupation"
-        android:textSize="20sp"
+            android:text="@string/occupation"
+            android:textSize="20sp"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_level_label"
-        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_level_label"
+            app:layout_constraintTop_toBottomOf="@id/fr_profile_user_level_label"
+            app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_level_label"
 
-        android:layout_marginTop="30dp"
-        />
+            android:layout_marginTop="30dp"
+            />
 
-    <TextView
-        android:id="@+id/fr_profile_user_occupation_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/fr_profile_user_occupation_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/occupation_example"
-        android:textSize="17sp"
-        android:textStyle="bold"
+            android:text="@string/occupation_example"
+            android:textSize="17sp"
+            android:textStyle="bold"
 
-        app:layout_constraintTop_toTopOf="@id/fr_profile_occupation_label"
-        app:layout_constraintBottom_toBottomOf="@id/fr_profile_occupation_label"
-        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_image_view"
-        />
+            app:layout_constraintTop_toTopOf="@id/fr_profile_occupation_label"
+            app:layout_constraintBottom_toBottomOf="@id/fr_profile_occupation_label"
+            app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_gender_image_view"
+            />
 
-    <Button
-        android:id="@+id/fr_profile_user_edit_profile_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/fr_profile_user_edit_profile_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/edit_profile"
-        android:textSize="17sp"
-        android:textAllCaps="true"
+            android:text="@string/edit_profile"
+            android:textSize="17sp"
+            android:textAllCaps="true"
 
 
-        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_email_text_view"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="40dp"
-        />
+            app:layout_constraintTop_toBottomOf="@id/fr_profile_user_email_text_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="40dp"
+            />
 
-    <Button
-        android:id="@+id/fr_profile_user_sign_out_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/fr_profile_user_sign_out_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-        android:text="@string/log_out"
-        android:textSize="13sp"
-        android:textAllCaps="true"
-        android:backgroundTint="@color/danger"
+            android:text="@string/log_out"
+            android:textSize="13sp"
+            android:textAllCaps="true"
+            android:backgroundTint="@color/danger"
 
-        app:layout_constraintTop_toBottomOf="@id/fr_profile_user_edit_profile_button"
-        app:layout_constraintRight_toRightOf="@id/fr_profile_user_edit_profile_button"
-        app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_edit_profile_button"
-        android:layout_marginTop="30dp"
-        />
+            app:layout_constraintTop_toBottomOf="@id/fr_profile_user_edit_profile_button"
+            app:layout_constraintRight_toRightOf="@id/fr_profile_user_edit_profile_button"
+            app:layout_constraintLeft_toLeftOf="@id/fr_profile_user_edit_profile_button"
+            android:layout_marginTop="30dp"
+            />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
